--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="js/main.js"></script>
 </head>
-<body bgcolor="lightpink">
+<body >
     <center>
 
-    <p>Digte o signo desejado:
+    <p id="margem"> Digte o signo desejado:
         <input type="text" placeholder="Inforne um texto" id="valor">
-        <button onclick="MudaDesenho()">Elevar Cosmo!</button><p>
+        <button onclick="MudaDesenho()">Elevar Cosmo!</button></p>
 
     <h1></h1>
     <h2></h2>
