--- a/index.html
+++ b/index.html
@@ -14,14 +14,18 @@
 </head>
 <body >
     <center>
+        
+        <img src="img/cavaleiros-logo.png">
+
+        <h1>Vamos descobrir qual Cavaleiro do Zodíaco te representa!</h1>
 
     <p id="margem"> Digte o signo desejado:
         <input type="text" placeholder="Inforne um texto" id="valor">
         <button onclick="MudaDesenho()">Elevar Cosmo!</button></p>
 
-    <h1></h1>
-    <h2></h2>
-    <img src="img/Cavaleiros-do-Zodiaco.jpg">
+    <h1 id="streetfighter"></h1>
+    <h2 id="valorant"></h2>
+    <img id="minecraft" src="img/Cavaleiros-do-Zodiaco.jpg">
 
 </center>
   
